# ChangeLog for dev-java/java-service-wrapper
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Sep 2006; Vlastimil Babka <caster@matfyz.cz>
  -java-service-wrapper-3.1.2-r1.ebuild,
  +java-service-wrapper-3.1.2-r2.ebuild,
  +files/java-service-wrapper-3.1.2-buildxml.patch:
  Sorted out junit dependency and java-strict.
