@@ -1,20 +1,5 @@
 AUX java-service-wrapper-3.1.2-buildxml.patch 2520 RMD160 085bd1a4ec23e3a5892199e1d66fd8b49667b429 SHA1 7d0ec5b2e69ee1087ffd9137e48ed994d433f409 SHA256 1b2ff0fcc4a195b6448dd6d40c32152f1ab87f713b803afe2a3266df1b6f80df
-MD5 c650fb4f8d8b1e9373315425b079ae57 files/java-service-wrapper-3.1.2-buildxml.patch 2520
-RMD160 085bd1a4ec23e3a5892199e1d66fd8b49667b429 files/java-service-wrapper-3.1.2-buildxml.patch 2520
-SHA256 1b2ff0fcc4a195b6448dd6d40c32152f1ab87f713b803afe2a3266df1b6f80df files/java-service-wrapper-3.1.2-buildxml.patch 2520
 AUX java-service-wrapper-3.1.2-gentoo.patch 1138 RMD160 5eb8ed337ee75e23dcdb072cc90d838fb6841570 SHA1 e17c5dc061fcb947ac1f4655f89f29512a37719e SHA256 b01ecd38b33c93648699409af1e78f28660830e6d2bfbebc85e9ce609a8cc55d
-MD5 bb80ebd446c7c7c1e131d4e091b0bcb0 files/java-service-wrapper-3.1.2-gentoo.patch 1138
-RMD160 5eb8ed337ee75e23dcdb072cc90d838fb6841570 files/java-service-wrapper-3.1.2-gentoo.patch 1138
-SHA256 b01ecd38b33c93648699409af1e78f28660830e6d2bfbebc85e9ce609a8cc55d files/java-service-wrapper-3.1.2-gentoo.patch 1138
 DIST wrapper_3.1.2_src.tar.gz 3327596 RMD160 0ef057ee76b56e6d7111a847834759baad4e4af4 SHA1 b26430920bc2fb833410721c348b47e9b8b6eecb SHA256 8ba78e6e218a0574ab68590c1bc24785e6ac7956d2b91ea8fd060f4325d24300
-EBUILD java-service-wrapper-3.1.2-r2.ebuild 1348 RMD160 0c33b44288683580a66ee95776c9d2246f7548dd SHA1 a2a00580fb75d7f5f407977ac6d4867db710569a SHA256 4bb93c95c2b90e019363265c8d36bd4cb9547a6173eca902a816c75d577817fa
-MD5 785139c9bafcce15906901b084d28de3 java-service-wrapper-3.1.2-r2.ebuild 1348
-RMD160 0c33b44288683580a66ee95776c9d2246f7548dd java-service-wrapper-3.1.2-r2.ebuild 1348
-SHA256 4bb93c95c2b90e019363265c8d36bd4cb9547a6173eca902a816c75d577817fa java-service-wrapper-3.1.2-r2.ebuild 1348
-MISC ChangeLog 362 RMD160 bb06b51fe10924c24a3bb9d7f00197de5f7667b4 SHA1 609b0c1d4e8e346f176c99269f384545122fb336 SHA256 e9fca1156e0b03b7ee3e0358387477888732de25fb35326a200f7e5fb3b827aa
-MD5 8d75a1d8ca58bc95d492e9c7458eb21a ChangeLog 362
-RMD160 bb06b51fe10924c24a3bb9d7f00197de5f7667b4 ChangeLog 362
-SHA256 e9fca1156e0b03b7ee3e0358387477888732de25fb35326a200f7e5fb3b827aa ChangeLog 362
-MD5 62fdc2100c3888014e3ca090321f5687 files/digest-java-service-wrapper-3.1.2-r2 256
-RMD160 e698e5029104dba33b989122026af6c04f215679 files/digest-java-service-wrapper-3.1.2-r2 256
-SHA256 42078d9e9ab5b555794ff78ac64622de5af5b086dfd69b9480bcf99e234a3d62 files/digest-java-service-wrapper-3.1.2-r2 256
+EBUILD java-service-wrapper-3.1.2-r2.ebuild 1440 RMD160 068c7af257824d6980d611ec37ee0550b7743de6 SHA1 744b62ab39de2632d45a3c3d83a0a5d43f284c77 SHA256 ae6a6ad3d051a708d30301cc7fd51a14b944a251184d0c1b86e9d76baed8e327
+MISC ChangeLog 478 RMD160 fc00f61942020288672742358ced7f594edac080 SHA1 e7321e68ac7caa5531f929e9eaa7369872f9a04f SHA256 57c637fe00d5653ad9a0ed85421642a914648c0fb8f80a2572b307c67490a0fd
